--- a/src/templates/countryList.hbs
+++ b/src/templates/countryList.hbs
@@ -1,5 +1,5 @@
 <ul class="list-group">
   {{#each this}}
-  <li class="list-group-item">{{name}}</li>
+  <li class="list-group-item">{{name.common}}</li>
   {{/each}}
 </ul>
